--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,25 @@ astroid==2.4.1
 attrs==19.3.0
 black==19.10b0
 click==7.1.2
+cycler==0.10.0
 flake8==3.8.1
 importlib-metadata==1.6.0
 isort==4.3.21
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+matplotlib==3.2.1
 mccabe==0.6.1
 mypy==0.770
 mypy-extensions==0.4.3
+numpy==1.18.4
 pathspec==0.8.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pylint==2.5.2
+pyparsing==2.4.7
 PyQt5==5.14.2
 PyQt5-sip==12.7.2
+python-dateutil==2.8.1
 regex==2020.5.14
 six==1.14.0
 toml==0.10.1
