--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+antlr4-python3-runtime==4.8
 appdirs==1.4.4
 astroid==2.4.1
 attrs==19.3.0
@@ -11,6 +12,7 @@ kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 matplotlib==3.2.1
 mccabe==0.6.1
+mpmath==1.1.0
 mypy==0.770
 mypy-extensions==0.4.3
 numpy==1.18.4
@@ -24,6 +26,7 @@ PyQt5-sip==12.7.2
 python-dateutil==2.8.1
 regex==2020.5.14
 six==1.14.0
+sympy==1.6
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
