--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,16 @@ astroid==2.4.1
 attrs==19.3.0
 black==19.10b0
 click==7.1.2
+ConfigArgParse==1.2.3
 cycler==0.10.0
 flake8==3.8.1
+fprettify==0.3.6
 importlib-metadata==1.6.0
 isort==4.3.21
+Jinja2==2.11.2
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 matplotlib==3.2.1
 mccabe==0.6.1
 mpmath==1.1.0
