--- a/requirements.txt
+++ b/requirements.txt
@@ -16,17 +16,22 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mccabe==0.6.1
+more-itertools==8.4.0
 mpmath==1.1.0
 mypy==0.770
 mypy-extensions==0.4.3
 numpy==1.18.4
+packaging==20.4
 pathspec==0.8.0
+pluggy==0.13.1
+py==1.8.2
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pylint==2.5.2
 pyparsing==2.4.7
 PyQt5==5.14.2
 PyQt5-sip==12.7.2
+pytest==5.4.3
 python-dateutil==2.8.1
 regex==2020.5.14
 six==1.14.0
@@ -34,5 +39,6 @@ sympy==1.6
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
+wcwidth==0.2.5
 wrapt==1.12.1
 zipp==3.1.0
