--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ mypy==0.770
 mypy-extensions==0.4.3
 numpy==1.18.4
 packaging==20.4
+pandas==1.0.5
 pathspec==0.8.0
 pluggy==0.13.1
 py==1.8.2
@@ -33,6 +34,7 @@ PyQt5==5.14.2
 PyQt5-sip==12.7.2
 pytest==5.4.3
 python-dateutil==2.8.1
+pytz==2020.1
 regex==2020.5.14
 six==1.14.0
 sympy==1.6
